# PREP-labyrinth

./: .gitignore  .travis.yml  CMakeLists.txt  Cell.cpp  Cell.hpp  Field.cpp  Field.hpp  README.md  Runner.cpp  Runner.hpp  Runner1.cpp  Runner1.h  debug.hpp  main.cpp  run_test.sh  utils.hpp
maze-visualizer/: frontend.js  index.html  index.js  package.json
test_labs/: test_lvl_1.txt  test_lvl_2.txt  test_lvl_3.txt  test_lvl_4.txt  test_lvl_5.txt  test_lvl_6.txt
tests/: maze.py  test.py
